new detail screen;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,8 @@
     <string name="where_to">Where To?</string>
     <string name="closest">Closest</string>
     <string name="all">All</string>
-
+    <string name="offer">OFFER</string>
+    <string name="merchant">Merchant</string>
+    <string name="distance">Distance</string>
+    <string name="profile">PROFILE</string>
 </resources>
